correctly error on -k "nonexistent" on Windows
The file test operators for Unix permission bits were returning a blanket
false result on systems where the bit being tested for doesn't exist.
That's a sensible way to treat a nonexistent bit when statting a file,
but the false result was being returned without checking that the argument
actually refers to a file.  Remove the pre-stat checks for nonexistent
bits, so that we get the correct errors for non-files.  We still get a
blanket false result for nonexistent bits on files.

--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -576,6 +576,13 @@ failing due to being applied to a closed or otherwise invalid file handle.
 
 =item *
 
+File test operators for Unix permission bits that don't exist on a
+particular platform, such as C<-k> (sticky bit) on Windows, now check that
+the file being tested exists before returning the blanket false result,
+and yield the appropriate errors if the argument doesn't refer to a file.
+
+=item *
+
 The in-place reverse optimisation now correctly strengthens weak
 references using the L<C<sv_rvunweaken()>|perlapi/sv_rvunweaken>
 API function.
