fix tainting of s/// with overloaded replacement
The substitution code was trying to track the taintedness of the
replacement string itself, but it didn't account for the replacement
being an untainted object with overloading that returns a tainted
stringification.  It looked at the taintedness of the object value, not
realising that taint could arise during the string concatenation per se.
Change the taint checks to look at the actual TAINT_get flag after string
concatenation.  This may falsely ascribe to the replacement taint that
actually came from somewhere else, but the end result is the same anyway:
there's no visible behaviour that distinguishes taint specifically from
the replacement.  Also remove a related taint check that seems to be
not needed at all.  Fixes [perl #115266].

--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -629,6 +629,12 @@ error code in C<$!>.  [perl #125774]
 
 =item *
 
+Regexp substitution using an overloaded replacement value that provides
+a tainted stringification now correctly taints the resulting string.
+[perl #115266]
+
+=item *
+
 Lexical sub declarations in C<do> blocks such as C<do { my sub lex; 123 }>
 could corrupt the stack, erasing items already on the stack in the
 enclosing statement.  This has been fixed.  [perl #132442]
