--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -2,9 +2,6 @@
 
 =head1 NAME
 
-[ this is a template for a new perldelta file.  Any text flagged as XXX needs
-to be processed before release. ]
-
 perldelta - what is new for perl v5.27.6
 
 =head1 DESCRIPTION
@@ -15,17 +12,7 @@ release.
 If you are upgrading from an earlier release such as 5.27.4, first read
 L<perl5275delta>, which describes differences between 5.27.4 and 5.27.5.
 
-=head1 Notice
-
-XXX Any important notices here
-
 =head1 Core Enhancements
-
-XXX New core language features go here.  Summarize user-visible core language
-enhancements.  Particularly prominent performance optimisations could go
-here, but most should go in the L</Performance Enhancements> section.
-
-[ List each enhancement as a =head2 entry ]
 
 =head2 Initialisation of aggregate state variables
 
@@ -45,23 +32,7 @@ work as well as they did before, which is to say they fall back to
 floating point, and ultimately operate on a fairly useless rounded inode
 number if the real inode number is too big for the floating point format.
 
-=head1 Security
-
-XXX Any security-related notices go here.  In particular, any security
-vulnerabilities closed should be noted here rather than in the
-L</Selected Bug Fixes> section.
-
-[ List each security issue as a =head2 entry ]
-
 =head1 Incompatible Changes
-
-XXX For a release on a stable branch, this section aspires to be:
-
-    There are no changes intentionally incompatible with 5.XXX.XXX
-    If any exist, they are bugs, and we request that you submit a
-    report.  See L</Reporting Bugs> below.
-
-[ List each incompatible change as a =head2 entry ]
 
 =head2 Yada-yada is now strictly a statement
 
@@ -95,6 +66,8 @@ accessing it will cause the stash entry to be upgraded to a typeglob.  The
 optimization does not apply to XSUBs or exported subroutines, and calling a
 method will undo it, since method calls cache things in typeglobs.
 
+(This change actually happened in perl 5.27.5 but was omitted from its perldelta.)
+
 [perl #129916] [perl #132252]
 
 =head2 Sort algorithm can no longer be specified
@@ -108,46 +81,9 @@ portable beyond Perl 5.8.  These subpragmata have now been deleted,
 and any attempt to use them is an error.  The L<sort> pragma otherwise
 remains, and the algorithm-neutral C<stable> subpragma can be used to
 control sorting behaviour.
-
-=head1 Deprecations
-
-XXX Any deprecated features, syntax, modules etc. should be listed here.
-
-=head2 Module removals
-
-XXX Remove this section if inapplicable.
-
-The following modules will be removed from the core distribution in a
-future release, and will at that time need to be installed from CPAN.
-Distributions on CPAN which require these modules will need to list them as
-prerequisites.
-
-The core versions of these modules will now issue C<"deprecated">-category
-warnings to alert you to this fact.  To silence these deprecation warnings,
-install the modules in question from CPAN.
-
-Note that these are (with rare exceptions) fine modules that you are encouraged
-to continue to use.  Their disinclusion from core primarily hinges on their
-necessity to bootstrapping a fully functional, CPAN-capable Perl installation,
-not usually on concerns over their design.
-
-=over
-
-=item XXX
-
-XXX Note that deprecated modules should be listed here even if they are listed
-as an updated module in the L</Modules and Pragmata> section.
-
-=back
-
-[ List each other deprecation as a =head2 entry ]
+[perl #119635]
 
 =head1 Performance Enhancements
-
-XXX Changes which enhance performance without changing behaviour go here.
-There may well be none in a stable release.
-
-[ List each enhancement as an =item entry ]
 
 =over 4
 
@@ -161,7 +97,7 @@ whole expression is now handled as a single op:
 
     $s .= "a=$a b=$b\n"
 
-As a special case, if the LHS of an assign is a lexical variable or
+As a special case, if the LHS of an assignment is a lexical variable or
 C<my $s>, the op itself handles retrieving the lexical variable, which
 is faster.
 
@@ -195,41 +131,22 @@ under L</Incompatible Changes>, above.
 
 =head1 Modules and Pragmata
 
-XXX All changes to installed files in F<cpan/>, F<dist/>, F<ext/> and F<lib/>
-go here.  If Module::CoreList is updated, generate an initial draft of the
-following sections using F<Porting/corelist-perldelta.pl>.  A paragraph summary
-for important changes should then be added by hand.  In an ideal world,
-dual-life modules would have a F<Changes> file that could be cribbed.
-
-The list of new and updated modules is modified automatically as part of
-preparing a Perl release, so the only reason to manually add entries here is if
-you're summarising the important changes in the module update. (Also, if the
-manually-added details don't match the automatically-generated ones, the
-release manager will have to investigate the situation carefully.)
-
-[ Within each section, list entries as an =item entry ]
+Key highlights in this release across several modules:
 
 =head2 Removal of use vars
 
-=over 4
-
-The usage of "use vars" has been discouraged since the introduction of our in
+The usage of C<use vars> has been discouraged since the introduction of C<our> in
 Perl 5.6.0. Where possible the usage of this pragma has now been removed from
 the Perl source code.
 
 This had a slight effect (for the better) on the output of WARNING_BITS in B::Deparse.
 
-=back
+=head2 Use of DynaLoader changed to XSLoader in many modules
 
-=head2 New Modules and Pragmata
-
-=over 4
-
-=item *
-
-XXX
-
-=back
+XSLoader is more modern, and most modules already require perl 5.6 or greater, so
+no functionality is lost by switching. In some cases, we have also made changes to
+the local implementation that may not be reflected in the version on CPAN due
+to a desire to maintain more backwards compatibility.
 
 =head2 Updated Modules and Pragmata
 
@@ -244,8 +161,17 @@ longer throws a "Not a GLOB reference" error.
 
 =item *
 
+L<Devel::PPPort> has moved from cpan-first to perl-first maintenance
+
+Primary responsibility for the code in Devel::PPPort has moved into core perl.
+In a practical sense there should be no change except that hopefully it will
+stay more up to date with changes made to symbols in perl, rather than needing
+to be updated after the fact.
+
+=item *
+
 L<File::Copy> has been upgraded from version 2.32 to 2.33.  It will now use
-Time::HiRes utime where available (RT #132401).
+Time::HiRes utime where available (perl #132401).
 
 =item *
 
@@ -271,26 +197,11 @@ XXX
 
 =head1 Documentation
 
-XXX Changes to files in F<pod/> go here.  Consider grouping entries by
-file and be sure to link to the appropriate page, e.g. L<perlfunc>.
-
-=head2 New Documentation
-
-XXX Changes which create B<new> files in F<pod/> go here.
-
-=head3 L<XXX>
-
-XXX Description of the purpose of the new file here
-
 =head2 Changes to Existing Documentation
 
 We have attempted to update the documentation to reflect the changes
 listed in this document.  If you find any we have missed, send email
 to L<perlbug@perl.org|mailto:perlbug@perl.org>.
-
-XXX Changes which significantly change existing files in F<pod/> go here.
-However, any changes to F<pod/perldiag.pod> should go in the L</Diagnostics>
-section.
 
 Additionally, the following selected changes have been made:
 
@@ -306,6 +217,11 @@ for the fact that some Unicode C</i> rules cause a few sequences such as
 
 to be considered variable length, and hence disallowed.
 
+=item * "Use of state $_ is experimental" in L<perldiag>
+
+This entry has been removed, as the experimental support of this construct was
+removed in perl 5.24.0.
+
 =item *
 
 The section on reference counting in L<perlguts> has been heavily revised,
@@ -320,7 +236,7 @@ paragraph on the same topic in L<perldata>.
 
 =item *
 
-The description of the C<x> operator in L<perlop> has been clarified.
+The description of the C<x> operator in L<perlop> has been clarified.  [perl #132460]
 
 =item *
 
@@ -330,6 +246,21 @@ the property was made in Perl 5.18, but not documented until now.  There
 are currently only two code points that match this property U+200C (ZERO
 WIDTH NON-JOINER) and U+200D (ZERO WIDTH JOINER).
 
+=item *
+
+The entry for C<$+> in perlvar has been expanded upon to describe handling of
+multiply-named capturing groups.
+
+=item *
+
+L<perlop> has been updated to note that C<qw>'s whitespace rules differ from that of
+C<split>'s in that only ASCII whitespace is used.
+
+=item *
+
+L<POSIX> has been updated with some more cautions about using locale-specific
+functions in threaded applications.
+
 =back
 
 =head1 Diagnostics
@@ -338,37 +269,7 @@ The following additions or changes have been made to diagnostic output,
 including warnings and fatal error messages.  For the complete list of
 diagnostic messages, see L<perldiag>.
 
-XXX New or changed warnings emitted by the core's C<C> code go here.  Also
-include any changes in L<perldiag> that reconcile it to the C<C> code.
-
-=head2 New Diagnostics
-
-XXX Newly added diagnostic messages go under here, separated into New Errors
-and New Warnings
-
-=head3 New Errors
-
-=over 4
-
-=item *
-
-XXX L<message|perldiag/"message">
-
-=back
-
-=head3 New Warnings
-
-=over 4
-
-=item *
-
-XXX L<message|perldiag/"message">
-
-=back
-
 =head2 Changes to Existing Diagnostics
-
-XXX Changes (i.e. rewording) of diagnostic messages go here
 
 =over 4
 
@@ -379,39 +280,21 @@ currently forbidden> has changed to C<Initialization of state variables
 in list currently forbidden>, because list-context initialization of
 single aggregate state variables is now permitted.
 
-=item *
-
-XXX Describe change here
-
 =back
 
 =head1 Utility Changes
 
-XXX Changes to installed programs such as F<perlbug> and F<xsubpp> go here.
-Most of these are built within the directory F<utils>.
-
-[ List utility changes as a =head2 entry for each utility and =item
-entries for each change
-Use L<XXX> with program names to get proper documentation linking. ]
-
-=head2 L<XXX>
+=head2 L<perlbug>
 
 =over 4
 
 =item *
 
-XXX
+C<--help> and C<--version> options have been added.
 
 =back
 
 =head1 Configuration and Compilation
-
-XXX Changes to F<Configure>, F<installperl>, F<installman>, and analogous tools
-go here.  Any other changes to the Perl build process should be listed here.
-However, any platform-specific changes should be listed in the
-L</Platform Support> section, instead.
-
-[ List changes as an =item entry ].
 
 =over 4
 
@@ -455,35 +338,6 @@ please report a bug if Perl now has new problems building on your platform.
 
 =back
 
-=head1 Testing
-
-XXX Any significant changes to the testing of a freshly built perl should be
-listed here.  Changes which create B<new> files in F<t/> go here as do any
-large changes to the testing harness (e.g. when parallel testing was added).
-Changes to existing files in F<t/> aren't worth summarizing, although the bugs
-that they represent may be covered elsewhere.
-
-XXX If there were no significant test changes, say this:
-
-Tests were added and changed to reflect the other additions and changes
-in this release.
-
-XXX If instead there were significant changes, say this:
-
-Tests were added and changed to reflect the other additions and
-changes in this release.  Furthermore, these significant changes were
-made:
-
-[ List each test improvement as an =item entry ]
-
-=over 4
-
-=item *
-
-XXX
-
-=back
-
 =head1 Packaging
 
 For the past few years we have released perl using three different archive
@@ -494,44 +348,17 @@ we have dropped the C<.bz2> archive format with this release.
 
 =head1 Platform Support
 
-XXX Any changes to platform support should be listed in the sections below.
-
-[ Within the sections, list each platform as an =item entry with specific
-changes as paragraphs below it. ]
-
-=head2 New Platforms
-
-XXX List any platforms that this version of perl compiles on, that previous
-versions did not.  These will either be enabled by new files in the F<hints/>
-directories, or new subdirectories and F<README> files at the top level of the
-source tree.
-
-=over 4
-
-=item XXX-some-platform
-
-XXX
-
-=back
-
 =head2 Discontinued Platforms
 
-XXX List any platforms that this version of perl no longer compiles on.
-
 =over 4
 
-=item XXX-some-platform
+=item PowerUX / Power MAX OS
 
-XXX
+Compiler hints and other support for these apparently long-defunct platforms has been removed.
 
 =back
 
 =head2 Platform-Specific Notes
-
-XXX List any changes for specific platforms.  This could include configuration
-and compilation changes or changes in portability/compatibility.  However,
-changes within modules for platforms should generally be listed in the
-L</Modules and Pragmata> section.
 
 =over 4
 
@@ -543,12 +370,6 @@ language systems.
 =back
 
 =head1 Internal Changes
-
-XXX Changes which affect the interface available to C<XS> code go here.  Other
-significant internal changes for future core maintainers should be noted as
-well.
-
-[ List each change as an =item entry ]
 
 =over 4
 
@@ -581,17 +402,12 @@ Direct access to L<C<PL_keyword_plugin>|perlapi/PL_keyword_plugin> is not
 safe in the presence of multithreading. A new
 L<C<wrap_keyword_plugin>|perlapi/wrap_keyword_plugin> function has been
 added to allow XS modules to safely define custom keywords even when
-loaded from a thread, analoguous to L<C<PL_check>|perlapi/PL_check> /
+loaded from a thread, analogous to L<C<PL_check>|perlapi/PL_check> /
 L<C<wrap_op_checker>|perlapi/wrap_op_checker>.
 
 =back
 
 =head1 Selected Bug Fixes
-
-XXX Important bug fixes in the core language are summarized here.  Bug fixes in
-files in F<ext/> and F<lib/> are best summarized in L</Modules and Pragmata>.
-
-[ List each fix as an =item entry ]
 
 =over 4
 
@@ -649,37 +465,16 @@ enclosing statement.  This has been fixed.  [perl #132442]
 
 =back
 
-=head1 Known Problems
-
-XXX Descriptions of platform agnostic bugs we know we can't fix go here.  Any
-tests that had to be C<TODO>ed for the release would be noted here.  Unfixed
-platform specific bugs also go here.
-
-[ List each fix as an =item entry ]
-
-=over 4
-
-=item *
-
-XXX
-
-=back
-
 =head1 Errata From Previous Releases
 
 =over 4
 
 =item *
 
-XXX Add anything here that we forgot to add, or were mistaken about, in
-the perldelta of a previous release.
+L</Subroutines no longer need typeglobs> under L</Incompatible Changes>, above,
+was made for perl 5.27.5 but was mistakenly omitted from its perldelta.
 
 =back
-
-=head1 Obituary
-
-XXX If any significant core contributor has died, we've added a short obituary
-here.
 
 =head1 Acknowledgements
 
