--- a/Porting/release_schedule.pod
+++ b/Porting/release_schedule.pod
@@ -63,7 +63,7 @@ you should reset the version numbers to the next blead series.
   2017-08-20  5.27.3 ✓        Matthew Horsfall
   2017-09-20  5.27.4 ✓        John Anderson
   2017-10-20  5.27.5 ✓        Steve Hay
-  2017-11-20  5.27.6          Karen Etheridge
+  2017-11-20  5.27.6 ✓        Karen Etheridge
   2017-12-20  5.27.7          BinGOs
   2018-01-20  5.27.8          Abigail
   2018-02-20  5.27.9          ?
