--- a/pod/perldiag.pod
+++ b/pod/perldiag.pod
@@ -1548,7 +1548,7 @@ references can be weakened.
 
 =item Can't "when" outside a topicalizer
 
-(F) You have used a when() block that is neither inside a C<foreach>
+(F) You have used a C<when> block that is neither inside a C<foreach>
 loop nor a C<given> block.  (Note that this error is issued on exit
 from the C<when> block, so you won't get the error if the match fails,
 or if you use an explicit C<continue>.)
@@ -2477,10 +2477,9 @@ L<perlfunc/getsockopt>.
 
 =item given is experimental
 
-(S experimental::smartmatch) C<given> depends on smartmatch, which
-is experimental, so its behavior may change or even be removed
-in any future release of perl.  See the explanation under
-L<perlsyn/Switch Statements>.
+(S experimental::smartmatch) C<given> is experimental, and its behavior
+may change or it may even be removed in any future release of perl.
+See the explanation under L<perlsyn/Switch Statements>.
 
 =item Global symbol "%s" requires explicit package name (did you forget to
 declare "my %s"?)
@@ -7432,11 +7431,9 @@ So put in parentheses to say what you really mean.
 
 =item when is experimental
 
-(S experimental::smartmatch) C<when> depends on smartmatch, which is
-experimental.  Additionally, it has several special cases that may
-not be immediately obvious, and their behavior may change or
-even be removed in any future release of perl.  See the explanation
-under L<perlsyn/Switch Statements>.
+(S experimental::smartmatch) C<when> is experimental, and its behavior
+may change or it may even be removed in any future release of perl.
+See the explanation under L<perlsyn/Switch Statements>.
 
 =item Wide character in %s
 
