--- a/pod/perlop.pod
+++ b/pod/perlop.pod
@@ -552,9 +552,7 @@ function, available in Perl v5.16 or later:
 =head2 Smartmatch Operator
 
 First available in Perl 5.10.1 (the 5.10.0 version behaved differently),
-binary C<~~> does a "smartmatch" between its arguments.  This is mostly
-used implicitly in the C<when> construct described in L<perlsyn>, although
-not all C<when> clauses call the smartmatch operator.  Unique among all of
+binary C<~~> does a "smartmatch" between its arguments.  Unique among all of
 Perl's operators, the smartmatch operator can recurse.  The smartmatch
 operator is L<experimental|perlpolicy/experimental> and its behavior is
 subject to change.
@@ -783,9 +781,6 @@ reference. The condition C<$init_fields ~~ $REQUIRED_FIELDS> also allows the
 strings C<"name">, C<"rank">, C<"serial_num"> as well as any array reference
 that contains C<"name"> or C<"rank"> or C<"serial_num"> anywhere to pass
 through.
-
-The smartmatch operator is most often used as the implicit operator of a
-C<when> clause.  See the section on "Switch Statements" in L<perlsyn>.
 
 =head3 Smartmatching of Objects
 
